--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "sinon": "^9.0.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "style-loader": "^1.2.1",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
