--- a/package.json
+++ b/package.json
@@ -33,66 +33,61 @@
     "samsung >= 4"
   ],
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "autoprefixer": "^9.8.4",
-    "axios": "^0.19.2",
+    "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^6.2.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
+    "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.4.0",
+    "eslint": "^7.10.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-compat": "^3.8.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "image-webpack-loader": "^6.0.0",
-    "laravel-mix": "^5.0.4",
-    "lodash": "^4.17.19",
-    "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^8.1.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-scss": "^2.0.0",
+    "file-loader": "^6.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "image-webpack-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.11.3",
+    "mocha": "^8.1.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.1.1",
+    "postcss-loader": "^4.0.3",
+    "postcss-scss": "^3.0.2",
     "pug": "^3.0.0",
     "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "resolve-url-loader": "^3.1.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
-    "sinon": "^9.0.2",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "sinon": "^9.1.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.6.1",
+    "style-loader": "^1.3.0",
+    "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^2.1.0",
-    "terser-webpack-plugin": "^2.3.7",
-    "vue-loader": "^15.9.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
+    "terser-webpack-plugin": "^2.3.8",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.8",
+    "webpack-merge": "^5.1.4",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "core-js-bundle": "^3.6.5",
     "imask": "^6.0.5",
-    "regenerator-runtime": "^0.13.5",
+    "regenerator-runtime": "^0.13.7",
     "tiny-slider": "^2.9.3"
   }
 }
