--- a/wp-content/plugins/wordless/composer.json
+++ b/wp-content/plugins/wordless/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "pug-php/pug": "^3.0",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "js-phpize/js-phpize": "^2.8"
     },
     "config": {
         "classmap-authoritative": true
