--- a/wp-content/themes/expert-massage/.gitignore
+++ b/wp-content/themes/expert-massage/.gitignore
@@ -7,11 +7,10 @@
 vendor
 node_modules
 
-# Dist, tmp & test
-dist/*/*
-!dist/*/.gitkeep
+# Dist, test, temp
 tmp/*
 !tmp/.gitkeep
+dist
 test
 
 # BD, logs
